# blend2d-svg

./: CMakeLists.txt  README.md  svgimage.cpp
app/: mappedfile.h
svg/: irendersvg.h
